Revision history for App-Cmd

{{$NEXT}}
          adds App::Cmd::Tester::CaptureExternal to capture output from
          external subcommands (thanks, David Golden)

0.313     2011-12-23 13:29:53 America/New_York
          don't load Text::Abbrev until it's needed (thanks, Olivier Mengué)

0.312     2011-08-17 18:02:26 America/New_York
          typo fixes to docs (thanks, Glenn Fowler)

          add the prepare_argv method (thanks, Ingy döt Net)

0.311     2011-03-17 22:42:19 America/New_York
          require the correct version of Getopt::Long::Descriptive (thanks,
          Glen Hinkle)

0.310     2010-12-11
          classes are now loaded with Class::Load, which should avoid bugs
          where classes are not succesfully loaded by program execution
          continues anyway (thanks to Kent Fredric)

          more checking is now done to ensure that plugins are members of the
          correct base class (thanks, Kent Fredric)

0.309     2010-11-12

          skip a failing test on perl 5.8.x

0.308     2010-11-08

          When App::Cmd::Setup tries to load MyApp::Command, and it exists but
          will not compile, the exception will now propagate.  Previously, it
          failed silently and App::Cmd::Command was used instead.  (bug found
          and fixed and tested for by Kent Fredric; thanks!)

0.307     2010-03-09
          bump up required version of Getopt::Long::Descriptive

0.306     2010-03-08
          return the App::Cmd object (when non-Simple) in the Tester result
          allow App::Cmd::Tester subclasses to chose another Result class

0.305     2010-03-07
          App::Cmd::Tester now reports (probable?) exit code of tested apps
          some improvements to the tutorial and other docs
          added some documentation for App::Cmd::Setup
          now searches for plugins under App::Cmd::Plugin::; use = to prevent

0.304     2009-12-07
          remove use of deprecated "-run" from synopsis (thanks, George
          Hartzell)