@@ -4,6 +4,9 @@ Revision history for App-Cmd
           adds App::Cmd::Tester::CaptureExternal to capture output from
           external subcommands (thanks, David Golden)
 
+          if there's no Pod =head1 NAME, a Pod::Weaver-esque #ABSTRACT will be
+          respected (thanks, Andreas Hernitscheck)
+
 0.313     2011-12-23 13:29:53 America/New_York
           don't load Text::Abbrev until it's needed (thanks, Olivier Mengué)
 
